--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -12,6 +12,7 @@
         <file>icon/bar/video.svg</file>
         <file>icon/bar/home.svg</file>
         <file>icon/home/icon.svg</file>
+        <file>icon/home/whiteBg.svg</file>
         <file>icon/home/search.svg</file>
         <file>icon/home/clear.svg</file>
         <file>icon/home/clipboard.svg</file>
@@ -35,8 +36,6 @@
         <file>icon/setting/checked.svg</file>
         <file>icon/setting/unchecked.svg</file>
         <file>icon/account.svg</file>
-        <file>style/dark.qss</file>
-        <file>style/light.qss</file>
         <file>CoverTest.jpeg</file>
         <file>CoverSpace.svg</file>
     </qresource>
